--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: example-container
-        image: your-docker-image:tag
+        image: heenaahuja6300/proooj
         ports:
         - containerPort: 80
