--- a/service.yaml
+++ b/service.yaml
@@ -1,12 +1,18 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: example-service
+
+name: my-service
 spec:
-  type: NodePort
-  ports:
-    - port: 80
-      targetPort: 80
-      nodePort: 30008  # Updated 'nodePort' value
-  selector:
-    app: example
+type: NodePort
+selector:
+app : nginx
+ports:
+- port: 80
+# By default and for convenience, the 'targetPort' is set to
+# the same value as the 'port" field.
+targetPort: 80
+# Optional field
+# By default and for convenience, the Kubernetes control plane
+# will allocate a port from a range (default: 30000-32767)
+nodePort: 30008
