--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,19 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: example-deployment
+name: nginx-deployment
+labels:
+app: nginx
 spec:
-  replicas: 2  # Change the number of replicas to 2
-  selector:
-    matchLabels:
-      app: example
-  template:
-    metadata:
-      labels:
-        app: example
-    spec:
-      containers:
-      - name: example-container
-        image: heenaahuja6300/proooj
-        ports:
-        - containerPort: 80
+replicas: 2
+selector:
+matchLabels:
+app: nginx
+template:
+metadata:
+labels:
+app: nginx
+spec:
+containers:
+- name: nginx
+image: heenaahuja6300/pro3
+ports:
+- containerPort: 80
