--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: my-deploy  # Change to your desired name
   labels:
     app: nginx
 spec:
@@ -19,4 +19,5 @@ spec:
         image: heenaahuja6300/pro3
         ports:
         - containerPort: 80
+
 
