--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,9 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: my-deploy  # Change to your desired name
-  labels:
-    app: nginx
+  name: nginx-deployment
 spec:
   replicas: 2
   selector:
